# rssani

./: .clang-tidy  .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  Dockerfile.integration  LICENSE  README.md  TODO.md  docker-compose.yml  grpc_server.cpp  grpc_server.h  mailsender.cpp  mailsender.h  main.cpp  mise.toml  myircsession.cpp  myircsession.h  rss_lite.cpp  rss_lite.h  rssani.pro  rssani.proto  rssani_en_US.ts  rssani_lite.cpp  rssani_lite.h  run.sh  test_xmlrpc.py  values.h  xmlrpc.cpp  xmlrpc.h
.github/workflows/: ci.yml
.qwen/: settings.json
tests/: test_mail_sender.cpp  test_myirc_session.cpp  test_rss_lite.cpp  test_rssani_lite.cpp  test_values.cpp
tests/integration/: test_grpc.py
